# 26463834-6623-11ec-90d6-0242ac120003

./: README.md  constants.py  init.py  utils.py
emailserviceui/: package-lock.json  package.json
emailserviceui/src/components/: MailSend.js  UserCreate.js  UserForm.js
mailservices/: README,md  setup.cfg
mailservices/mailservices/: __init__.py
mailservices/src/mail_services/: MailService.py
mailservices/src/mail_services_rohit_yadav.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
