[metadata]
name = mail-services-rohit-yadav
version = 0.0.1
author = Rohit Yadav
author_email = rky71992@gmail.com
description = Test package to send mail using free mail services
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rky71992/26463834-6623-11ec-90d6-0242ac120003
project_urls =
    Bug Tracker = https://github.com/rky71992/26463834-6623-11ec-90d6-0242ac120003/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src